// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component arrow direction - bottom 1`] = `
<Dropdown
  active={false}
  className=""
  direction="bottom"
  disabledClassName=""
  iconClassName=""
  isDisabled={false}
  itemsClassName=""
  label="TEST"
>
  <div
    className="dropdown"
    onClick={[Function]}
  >
    <DropdownTitle
      className=""
      direction="bottom"
      disabledClassName=""
      iconClassName=""
      isDisabled={false}
    >
      <span
        className="dropdown_title"
      >
        TEST
        <DropdownIcon
          className=""
          direction="bottom"
          disabledClassName=""
          isDisabled={false}
        >
          <DownIcon
            className="icon"
          >
            <svg
              className="icon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              />
            </svg>
          </DownIcon>
        </DropdownIcon>
      </span>
    </DropdownTitle>
  </div>
</Dropdown>
`;

exports[`Dropdown component arrow direction - bottom_left 1`] = `
<Dropdown
  active={false}
  className=""
  direction="bottom_left"
  disabledClassName=""
  iconClassName=""
  isDisabled={false}
  itemsClassName=""
  label="TEST"
>
  <div
    className="dropdown"
    onClick={[Function]}
  >
    <DropdownTitle
      className=""
      direction="bottom_left"
      disabledClassName=""
      iconClassName=""
      isDisabled={false}
    >
      <span
        className="dropdown_title"
      >
        TEST
        <DropdownIcon
          className=""
          direction="bottom_left"
          disabledClassName=""
          isDisabled={false}
        >
          <DownIcon
            className="icon"
          >
            <svg
              className="icon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              />
            </svg>
          </DownIcon>
        </DropdownIcon>
      </span>
    </DropdownTitle>
  </div>
</Dropdown>
`;

exports[`Dropdown component arrow direction - left 1`] = `
<Dropdown
  active={false}
  className=""
  direction="left"
  disabledClassName=""
  iconClassName=""
  isDisabled={false}
  itemsClassName=""
  label="TEST"
>
  <div
    className="dropdown"
    onClick={[Function]}
  >
    <DropdownTitle
      className=""
      direction="left"
      disabledClassName=""
      iconClassName=""
      isDisabled={false}
    >
      <span
        className="dropdown_title"
      >
        <DropdownIcon
          className=""
          direction="left"
          disabledClassName=""
          isDisabled={false}
        >
          <LeftIcon
            className="icon"
          >
            <svg
              className="icon"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 8l-4 4 4 4"
                fill="none"
                fillRule="evenodd"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="1"
              />
            </svg>
          </LeftIcon>
        </DropdownIcon>
        TEST
      </span>
    </DropdownTitle>
  </div>
</Dropdown>
`;

exports[`Dropdown component arrow direction - left to top 1`] = `
<Dropdown
  active={false}
  className=""
  direction="left_to_top"
  disabledClassName=""
  iconClassName=""
  isDisabled={false}
  itemsClassName=""
  label="TEST"
>
  <div
    className="dropdown"
    onClick={[Function]}
  >
    <DropdownTitle
      className=""
      direction="left_to_top"
      disabledClassName=""
      iconClassName=""
      isDisabled={false}
    >
      <span
        className="dropdown_title"
      >
        TEST
        <DropdownIcon
          className=""
          direction="left_to_top"
          disabledClassName=""
          isDisabled={false}
        >
          <DownIcon
            className="icon"
          >
            <svg
              className="icon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              />
            </svg>
          </DownIcon>
        </DropdownIcon>
      </span>
    </DropdownTitle>
  </div>
</Dropdown>
`;

exports[`Dropdown component arrow direction - right 1`] = `
<Dropdown
  active={false}
  className=""
  direction="right"
  disabledClassName=""
  iconClassName=""
  isDisabled={false}
  itemsClassName=""
  label="TEST"
>
  <div
    className="dropdown"
    onClick={[Function]}
  >
    <DropdownTitle
      className=""
      direction="right"
      disabledClassName=""
      iconClassName=""
      isDisabled={false}
    >
      <span
        className="dropdown_title"
      >
        TEST
        <DropdownIcon
          className=""
          direction="right"
          disabledClassName=""
          isDisabled={false}
        >
          <RightIcon
            className="icon"
          >
            <svg
              className="icon"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 8l4 4-4 4"
                fill="none"
                fillRule="evenodd"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="1"
              />
            </svg>
          </RightIcon>
        </DropdownIcon>
      </span>
    </DropdownTitle>
  </div>
</Dropdown>
`;

exports[`Dropdown component arrow direction - right to top 1`] = `
<Dropdown
  active={false}
  className=""
  direction="right_to_top"
  disabledClassName=""
  iconClassName=""
  isDisabled={false}
  itemsClassName=""
  label="TEST"
>
  <div
    className="dropdown"
    onClick={[Function]}
  >
    <DropdownTitle
      className=""
      direction="right_to_top"
      disabledClassName=""
      iconClassName=""
      isDisabled={false}
    >
      <span
        className="dropdown_title"
      >
        TEST
        <DropdownIcon
          className=""
          direction="right_to_top"
          disabledClassName=""
          isDisabled={false}
        >
          <DownIcon
            className="icon"
          >
            <svg
              className="icon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              />
            </svg>
          </DownIcon>
        </DropdownIcon>
      </span>
    </DropdownTitle>
  </div>
</Dropdown>
`;

exports[`Dropdown component arrow direction - unknown 1`] = `
<Dropdown
  active={false}
  className=""
  direction="TEST"
  disabledClassName=""
  iconClassName=""
  isDisabled={false}
  itemsClassName=""
  label="TEST"
>
  <div
    className="dropdown"
    onClick={[Function]}
  >
    <DropdownTitle
      className=""
      direction="TEST"
      disabledClassName=""
      iconClassName=""
      isDisabled={false}
    >
      <span
        className="dropdown_title"
      >
        TEST
        <DropdownIcon
          className=""
          direction="TEST"
          disabledClassName=""
          isDisabled={false}
        >
          <DownIcon
            className="icon"
          >
            <svg
              className="icon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              />
            </svg>
          </DownIcon>
        </DropdownIcon>
      </span>
    </DropdownTitle>
  </div>
</Dropdown>
`;

exports[`Dropdown component default snapshot 1`] = `
<div
  className="dropdown"
  onClick={[Function]}
>
  <span
    className="dropdown_title"
  >
    
    <svg
      className="icon"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      />
    </svg>
  </span>
</div>
`;

exports[`Dropdown component snapshot with active 1`] = `
<div
  className="dropdown undefined"
  onClick={[Function]}
>
  <DropdownTitle
    className=""
    direction="bottom"
    disabledClassName=""
    iconClassName=""
    isDisabled={false}
  />
  <div
    className="dropdown_items dropdown_items_bottom"
  >
    <div
      active={false}
      key=".0"
      onMouseEnter={[Function]}
    >
      item 1
    </div>
    <div
      active={true}
      key=".1"
      onMouseEnter={[Function]}
    >
      item 2
    </div>
  </div>
</div>
`;

exports[`Dropdown component snapshot with active and disbaled 1`] = `
<div
  className="dropdown disabled"
  onClick={[Function]}
>
  <DropdownTitle
    className=""
    direction="bottom"
    disabledClassName=""
    iconClassName=""
    isDisabled={true}
  />
</div>
`;

exports[`Dropdown component snapshot with children 1`] = `
<div
  className="dropdown"
  onClick={[Function]}
>
  <span
    className="dropdown_title"
  >
    
    <svg
      className="icon"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      />
    </svg>
  </span>
</div>
`;

exports[`Dropdown component snapshot with className 1`] = `
<div
  className="dropdown className"
  onClick={[Function]}
>
  <span
    className="dropdown_title"
  >
    
    <svg
      className="icon"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      />
    </svg>
  </span>
</div>
`;

exports[`Dropdown component snapshot with disabled 1`] = `
<div
  className="dropdown disabled"
  onClick={[Function]}
>
  <span
    className="dropdown_title"
  >
    
    <svg
      className="icon disabled"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      />
    </svg>
  </span>
</div>
`;

exports[`Dropdown component snapshot with disabledClassName 1`] = `
<div
  className="dropdown disabledClassName"
  onClick={[Function]}
>
  <span
    className="dropdown_title"
  >
    
    <svg
      className="icon disabledClassName"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      />
    </svg>
  </span>
</div>
`;

exports[`Dropdown component snapshot with label 1`] = `
<div
  className="dropdown"
  onClick={[Function]}
>
  <span
    className="dropdown_title"
  >
    menu1
    <svg
      className="icon"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      />
    </svg>
  </span>
</div>
`;
